k8s-taerfik-ingress/client-taerfik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: client-ingress-route
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`localhost`)
    kind: Rule
    services:
    - name: client-cluster-ip-service
      port: 3000
  - match: Host(`localhost`) && PathPrefix(`/api/*`)
    kind: Rule
    services:
    - name: server-cluster-ip-service
      port: 5000
