k8s-taerfik-ingress/server-taerfik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: server-ingress-route
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/api`)
    kind: Rule
    services:
    - name: server-cluster-ip-service
      port: 5000
